# micapipe

./: .gitignore  Dockerfile  MANIFEST.in  README.md  micapipe  pyproject.toml
.github/workflows/: blank.yml  ci_test.yml
docs/: conf.py
docs/getting_started/: installation.md
docs/pages/02.aslproc/: index.rst
docs/pages/04.surfaces/: index.rst
docs/usage/: app_cli.md
functions/: 02_proc-task.sh  mic2bids
micapipe/: dag2png.sh  pipeline_description.json  sample_run.sh  wet_run.sh  workflow.dag
micapipe/config/: snakebids.yml
micapipe/old/: Dockerfile
micapipe/old/rules/: structural.smk
micapipe/workflow/: Snakefile  Snakefile_main  Snakefile_wet  common.smk
micapipe/workflow/rules/: dwi.smk  flair.smk  func.smk  mpc.smk  mpc_swm.smk  qc.smk  structural.smk  swm.smk
micapipe_snakebids/: README.md  dag.sh  run.py  wet_run.sh  workflow.dag
micapipe_snakebids/config/: mvp.yml  snakebids.yml
micapipe_snakebids/scripts/: dag.sh  sample_run.sh  wet_run.sh
micapipe_snakebids/workflow/: Snakefile
parcellations/lut/: lut_aparc-a2009s_mics.csv  lut_aparc_mics.csv  lut_schaefer-1000_mics.csv  lut_schaefer-100_mics.csv  lut_schaefer-200_mics.csv  lut_schaefer-300_mics.csv  lut_schaefer-400_mics.csv  lut_schaefer-500_mics.csv  lut_schaefer-600_mics.csv  lut_schaefer-700_mics.csv  lut_schaefer-800_mics.csv  lut_schaefer-900_mics.csv  lut_subcortical-cerebellum_mics.csv  lut_vosdewael-100_mics.csv  lut_vosdewael-200_mics.csv  lut_vosdewael-300_mics.csv  lut_vosdewael-400_mics.csv
tests/: sample_test.sh  test.sh
(+7 files in other folders)
